firmware/comunicacao/build/log/idf_py_stdout_output_36194
[1/17] Performing build step for 'bootloader'
[1/1] cd /Users/mgois/tcc/com_module/build/bootloader/esp-idf/esptool_py && /Users/mgois/.espressif/python_env/idf5.1_py3.10_env/bin/python /Users/mgois/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/mgois/tcc/com_module/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[2/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/structures.c.obj
FAILED: esp-idf/components/CMakeFiles/__idf_components.dir/structures.c.obj 
/Users/mgois/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -I/Users/mgois/tcc/com_module/build/config -I/Users/mgois/tcc/com_module/components/include -I/Users/mgois/esp/esp-idf/components/newlib/platform_include -I/Users/mgois/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/mgois/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/Users/mgois/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/mgois/esp/esp-idf/components/freertos/esp_additions/include -I/Users/mgois/esp/esp-idf/components/esp_hw_support/include -I/Users/mgois/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/mgois/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/mgois/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/mgois/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/Users/mgois/esp/esp-idf/components/heap/include -I/Users/mgois/esp/esp-idf/components/log/include -I/Users/mgois/esp/esp-idf/components/soc/include -I/Users/mgois/esp/esp-idf/components/soc/esp32/. -I/Users/mgois/esp/esp-idf/components/soc/esp32/include -I/Users/mgois/esp/esp-idf/components/hal/esp32/include -I/Users/mgois/esp/esp-idf/components/hal/include -I/Users/mgois/esp/esp-idf/components/hal/platform_port/include -I/Users/mgois/esp/esp-idf/components/esp_rom/include -I/Users/mgois/esp/esp-idf/components/esp_rom/include/esp32 -I/Users/mgois/esp/esp-idf/components/esp_rom/esp32 -I/Users/mgois/esp/esp-idf/components/esp_common/include -I/Users/mgois/esp/esp-idf/components/esp_system/include -I/Users/mgois/esp/esp-idf/components/esp_system/port/soc -I/Users/mgois/esp/esp-idf/components/esp_system/port/include/private -I/Users/mgois/esp/esp-idf/components/xtensa/include -I/Users/mgois/esp/esp-idf/components/xtensa/esp32/include -I/Users/mgois/esp/esp-idf/components/lwip/include -I/Users/mgois/esp/esp-idf/components/lwip/include/apps -I/Users/mgois/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/mgois/esp/esp-idf/components/lwip/lwip/src/include -I/Users/mgois/esp/esp-idf/components/lwip/port/esp32/include -I/Users/mgois/esp/esp-idf/components/lwip/port/esp32/include/arch -I/Users/mgois/esp/esp-idf/components/driver/include -I/Users/mgois/esp/esp-idf/components/driver/deprecated -I/Users/mgois/esp/esp-idf/components/driver/esp32/include -I/Users/mgois/esp/esp-idf/components/esp_pm/include -I/Users/mgois/esp/esp-idf/components/esp_ringbuf/include -I/Users/mgois/esp/esp-idf/components/json/cJSON -I/Users/mgois/esp/esp-idf/components/mqtt/esp-mqtt/include -I/Users/mgois/esp/esp-idf/components/esp_event/include -I/Users/mgois/esp/esp-idf/components/tcp_transport/include -I/Users/mgois/esp/esp-idf/components/esp-tls -I/Users/mgois/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/Users/mgois/esp/esp-idf/components/mbedtls/port/include -I/Users/mgois/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/mgois/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/mgois/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/mgois/esp/esp-idf/components/spiffs/include -I/Users/mgois/esp/esp-idf/components/spi_flash/include -I/Users/mgois/esp/esp-idf/components/esp_http_server/include -I/Users/mgois/esp/esp-idf/components/http_parser -I/Users/mgois/esp/esp-idf/components/esp_eth/include -I/Users/mgois/esp/esp-idf/components/esp_wifi/include -I/Users/mgois/esp/esp-idf/components/esp_phy/include -I/Users/mgois/esp/esp-idf/components/esp_phy/esp32/include -I/Users/mgois/esp/esp-idf/components/esp_netif/include -I/Users/mgois/esp/esp-idf/components/nvs_flash/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/Users/mgois/tcc/com_module=. -fmacro-prefix-map=/Users/mgois/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.1-dev-187-g5b11895700\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/components/CMakeFiles/__idf_components.dir/structures.c.obj -MF esp-idf/components/CMakeFiles/__idf_components.dir/structures.c.obj.d -o esp-idf/components/CMakeFiles/__idf_components.dir/structures.c.obj -c /Users/mgois/tcc/com_module/components/structures.c
/Users/mgois/tcc/com_module/components/structures.c: In function 'split_tag_value':
/Users/mgois/tcc/com_module/components/structures.c:8:22: error: 'split' has no member named 'tag'
    8 |     tag_value_splited->tag = strtok(tag_value, "-");
      |                      ^~
/Users/mgois/tcc/com_module/components/structures.c:9:22: error: 'split' has no member named 'value'
    9 |     tag_value_splited->value = strtok(NULL, "-");
      |                      ^~
[3/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_subscriber.c.obj
[4/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_publish_state.c.obj
[5/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/uart.c.obj
[6/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_publish.c.obj
[7/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[8/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_subscriber_rele2.c.obj
[9/15] Building C object esp-idf/components/CMakeFiles/__idf_components.dir/mqtt.c.obj
ninja: build stopped: subcommand failed.
